fixed a problem when the images wasn't covering the inclosing div

--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -13,10 +13,11 @@
 .image {
     opacity: 1;
     display: block;
-    width: 100%;
-    height: auto;
+    min-width: 100%;
+    min-height: 100%;
     transition: .5s ease;
     backface-visibility: hidden;
+    object-fit: cover;
 }
 
 .middle {
@@ -27,6 +28,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
 }
 
 .overlay:hover .image {
